// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`align defaults to left 1`] = `
<table>
  <tbody>
    <tr>
      <td
        class="euiTableRowCell euiTableRowCell--middle"
      >
        <div
          class="euiTableCellContent"
        >
          <span
            class="euiTableCellContent__text"
          />
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`align renders center when specified 1`] = `
<table>
  <tbody>
    <tr>
      <td
        class="euiTableRowCell euiTableRowCell--middle"
      >
        <div
          class="euiTableCellContent euiTableCellContent--alignCenter"
        >
          <span
            class="euiTableCellContent__text"
          />
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`align renders right when specified 1`] = `
<table>
  <tbody>
    <tr>
      <td
        class="euiTableRowCell euiTableRowCell--middle"
      >
        <div
          class="euiTableCellContent euiTableCellContent--alignRight"
        >
          <span
            class="euiTableCellContent__text"
          />
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`children's className merges new classnames into existing ones 1`] = `
<table>
  <tbody>
    <tr>
      <td
        class="euiTableRowCell euiTableRowCell--middle"
      >
        <div
          class="euiTableCellContent euiTableCellContent--showOnHover euiTableCellContent--overflowingContent"
        >
          <div
            class="testClass euiTableCellContent__hoverItem"
          />
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`renders EuiTableRowCell 1`] = `
<table>
  <tbody>
    <tr>
      <td
        aria-label="aria-label"
        class="euiTableRowCell euiTableRowCell--middle"
        data-test-subj="test subject string"
      >
        <div
          class="euiTableCellContent testClass1 testClass2 emotion-euiTestCss"
        >
          <span
            class="euiTableCellContent__text"
          >
            children
          </span>
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`textOnly defaults to true 1`] = `
<table>
  <tbody>
    <tr>
      <td
        class="euiTableRowCell euiTableRowCell--middle"
      >
        <div
          class="euiTableCellContent"
        >
          <span
            class="euiTableCellContent__text"
          />
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`textOnly is rendered when specified 1`] = `
<table>
  <tbody>
    <tr>
      <td
        class="euiTableRowCell euiTableRowCell--middle"
      >
        <div
          class="euiTableCellContent euiTableCellContent--overflowingContent"
        />
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`truncateText defaults to false 1`] = `
<table>
  <tbody>
    <tr>
      <td
        class="euiTableRowCell euiTableRowCell--middle"
      >
        <div
          class="euiTableCellContent"
        >
          <span
            class="euiTableCellContent__text"
          />
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`truncateText renders lines configuration 1`] = `
<table>
  <tbody>
    <tr>
      <td
        class="euiTableRowCell euiTableRowCell--middle"
      >
        <div
          class="euiTableCellContent"
        >
          <span
            class="euiTableCellContent__text euiTextBlockTruncate emotion-euiTextBlockTruncate"
          />
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`truncateText renders true 1`] = `
<table>
  <tbody>
    <tr>
      <td
        class="euiTableRowCell euiTableRowCell--middle"
      >
        <div
          class="euiTableCellContent euiTableCellContent--truncateText"
        >
          <span
            class="euiTableCellContent__text"
          />
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`valign defaults to middle 1`] = `
<table>
  <tbody>
    <tr>
      <td
        class="euiTableRowCell euiTableRowCell--middle"
      >
        <div
          class="euiTableCellContent"
        >
          <span
            class="euiTableCellContent__text"
          />
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`valign renders bottom when specified 1`] = `
<table>
  <tbody>
    <tr>
      <td
        class="euiTableRowCell euiTableRowCell--bottom"
      >
        <div
          class="euiTableCellContent"
        >
          <span
            class="euiTableCellContent__text"
          />
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`valign renders top when specified 1`] = `
<table>
  <tbody>
    <tr>
      <td
        class="euiTableRowCell euiTableRowCell--top"
      >
        <div
          class="euiTableCellContent"
        >
          <span
            class="euiTableCellContent__text"
          />
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`width and style accepts style attribute 1`] = `
<table>
  <tbody>
    <tr>
      <td
        class="euiTableRowCell euiTableRowCell--middle"
        style="width: 20%;"
      >
        <div
          class="euiTableCellContent"
        >
          <span
            class="euiTableCellContent__text"
          >
            Test
          </span>
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`width and style accepts width attribute 1`] = `
<table>
  <tbody>
    <tr>
      <td
        class="euiTableRowCell euiTableRowCell--middle"
        style="width: 10%;"
      >
        <div
          class="euiTableCellContent"
        >
          <span
            class="euiTableCellContent__text"
          >
            Test
          </span>
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`width and style accepts width attribute as number 1`] = `
<table>
  <tbody>
    <tr>
      <td
        class="euiTableRowCell euiTableRowCell--middle"
        style="width: 100px;"
      >
        <div
          class="euiTableCellContent"
        >
          <span
            class="euiTableCellContent__text"
          >
            Test
          </span>
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`width and style resolves style and width attribute 1`] = `
<table>
  <tbody>
    <tr>
      <td
        class="euiTableRowCell euiTableRowCell--middle"
        style="width: 10%;"
      >
        <div
          class="euiTableCellContent"
        >
          <span
            class="euiTableCellContent__text"
          >
            Test
          </span>
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;
